JS File Add & add some feature

--- a/Html/index.html
+++ b/Html/index.html
@@ -20,13 +20,7 @@
       <hr />
       <main>
         <div class="selectCategory">
-          <select name="" id="">
-            <option value="mass">Mass</option>
-            <option value="time">Time</option>
-            <option value="area">Area</option>
-            <option value="length">Length</option>
-            <option value="energy">Energy</option>
-          </select>
+          <select name="category-select" id="category-select"></select>
         </div>
         <div class="selectDiv">
           <div class="rightSelect selectArea">
@@ -60,4 +54,5 @@
       </footer>
     </div>
   </body>
+  <script src="../Js/app.js"></script>
 </html>
