Select Option Function Add

--- a/Html/index.html
+++ b/Html/index.html
@@ -23,24 +23,14 @@
           <select name="category-select" id="category-select"></select>
         </div>
         <div class="selectDiv">
-          <div class="rightSelect selectArea">
-            <input type="text" />
-            <select name="" id="">
-              <option value="">kilogram</option>
-              <option value="">kilometer</option>
-              <option value="">gram</option>
-              <option value="">mile meter</option>
-            </select>
+          <div class="leftSelect selectArea">
+            <input type="leftSelect text" />
+            <select name="leftSelect" id="leftSelect"></select>
           </div>
           <div class="equal">=</div>
-          <div class="leftSelect selectArea">
+          <div class="rightSelect selectArea">
             <input type="text" />
-            <select name="" id="">
-              <option value="">kilogram</option>
-              <option value="">kilometer</option>
-              <option value="">gram</option>
-              <option value="">mile meter</option>
-            </select>
+            <select name="rightSelect" id="rightSelect"></select>
           </div>
         </div>
       </main>
