--- a/Html/index.html
+++ b/Html/index.html
@@ -24,19 +24,19 @@
         </div>
         <div class="selectDiv">
           <div class="leftSelect selectArea">
-            <input type="leftSelect text" />
+            <input type="number" id="leftSelectInput" value="1"/>
             <select name="leftSelect" id="leftSelect"></select>
           </div>
           <div class="equal">=</div>
           <div class="rightSelect selectArea">
-            <input type="text" />
+            <input type="number" id="rightSelectInput" />
             <select name="rightSelect" id="rightSelect"></select>
           </div>
         </div>
       </main>
       <footer>
         <p class="title">Formula</p>
-        <p class="furmula">
+        <p class="furmula" id="formula">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit.
           Necessitatibus, aut quisquam dolores veniam obcaecati numquam dolorem
           ?
